edit services and profile

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="home-about-container-row-img">
-                            <img class="img-fluid" src="../../assets/img/about.png" alt="">
+                            <img class="img-fluid" src="../../assets/imgs/home/about.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
 
     <section class="home-team  container-fluid" >
         <div class="home-team_img">
-            <img src="../../assets/img/team1.png" alt="" class="img-fluid">
+            <img src="../../assets/imgs/home/team1.png" alt="" class="img-fluid">
         </div>
         <div class="container">
             <div class="home-team__header">
@@ -165,23 +165,23 @@
             <div class="home-team__gallery row">
                 <div class="home-team__gallery-item col-md-2" id="team">
                     <h3>Ali</h3>
-                    <img src="../../assets/img/ali.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="../../assets/imgs/home/ali.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Mai</h3>
-                    <img src="../../assets/img/mai.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="../../assets/imgs/home/mai.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Mohamed</h3>
-                    <img src="../../assets/img/moahmed.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="../../assets/imgs/home/moahmed.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Nada</h3>
-                    <img src="../../assets/img/nada.jpeg" alt="" class="rounded-circle img-fluid">
+                    <img src="../../assets/imgs/home/nada.jpeg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Omnia</h3>
-                    <img src="../../assets/img/omnia.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="../../assets/imgs/home/omnia.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
             </div>
         </div>
