--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,3 @@
-<<<<<<< HEAD
-<!-- 
-<app-create-project></app-create-project> --> 
-<!-- <app-account-navbar></app-account-navbar>
-<app-navbar></app-navbar> 
-<router-outlet></router-outlet>
-<app-profile></app-profile>-->
-<!-- <app-all-projects></app-all-projects> -->
-<!-- <app-friends></app-friends>  -->
-<!-- <app-login></app-login> -->
-<!-- <app-register></app-register> -->
-<!-- ----------------profile -------------- -->
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-profile></app-profile> -->
-<!-- <app-home></app-home> -->
-<app-drag-timer></app-drag-timer>
-<!-- <app-admin-panel></app-admin-panel> -->
-<app-friend-request></app-friend-request>
-<app-all-friends></app-all-friends> 
-=======
-<router-outlet></router-outlet>
->>>>>>> blue
+<app-admin-panel></app-admin-panel>
