--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -6,7 +6,9 @@
     </div>
   </section> -->
   <div class="row d-flex justify-content-end pr-4">
-    <button mat-button (click)="openDialog()" class="edit-project"><mat-icon>create</mat-icon> Edit Project</button>
+    <button mat-button (click)="openDialog()" class="edit-project">
+      <mat-icon>create</mat-icon> Edit Project
+    </button>
   </div>
 
   <section class="row project-details justify-content-between mb-5">
@@ -23,7 +25,7 @@
           </li>
           <li class="d-flex date-details row">
             <div class="col-6">
-              <span class="title h3" >Start Date : </span>
+              <span class="title h3">Start Date : </span>
               <span class="data">{{ project.startDate | date:'shortDate' }}</span>
             </div>
             <div class="col-6">
@@ -35,15 +37,15 @@
             <span class="title h3 project-descrip-title">Project Description :</span>
             <blockquote>{{ project.description }}</blockquote>
           </li>
-          
+
         </ul>
       </div>
     </div>
     <div class="col-md-6">
       <div class="container">
-          <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
-            [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
-          </canvas>
+        <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+          [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
+        </canvas>
       </div>
     </div>
   </section>
@@ -51,18 +53,18 @@
     <p class="h3 pl-4">Attachments</p>
     <div class="container attachments-wrapper d-flex align-items-center">
       <div class="attachmentItem">
-        <a href="../../assets/imgs/edit-project/pdfFile.png" download> 
-          <img src="../../assets/imgs/edit-project/pdfFile.png" class="img-fluid" alt="pdf file"> 
-        </a> 
-      </div>
-      <div class="attachmentItem">
-        <a href="../../assets/imgs/edit-project/Screenshot.png" download> 
-          <img src="../../assets/imgs/edit-project/Screenshot.png" class="img-fluid" alt="code"> 
+        <a href="../../assets/imgs/edit-project/pdfFile.png" download>
+          <img src="../../assets/imgs/edit-project/pdfFile.png" class="img-fluid" alt="pdf file">
         </a>
       </div>
       <div class="attachmentItem">
-        <a href="../../assets/imgs/edit-project/pdfFile.png" download> 
-          <img src="../../assets/imgs/edit-project/pdfFile.png" class="img-fluid" alt="pdf file"> 
+        <a href="../../assets/imgs/edit-project/Screenshot.png" download>
+          <img src="../../assets/imgs/edit-project/Screenshot.png" class="img-fluid" alt="code">
+        </a>
+      </div>
+      <div class="attachmentItem">
+        <a href="../../assets/imgs/edit-project/pdfFile.png" download>
+          <img src="../../assets/imgs/edit-project/pdfFile.png" class="img-fluid" alt="pdf file">
         </a>
       </div>
     </div>
