--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -47,7 +47,7 @@
             </p>
           </div>
         </a>
-        <button (click)="delete($event,project)">del</button>
+        <!-- <button (click)="delete($event,project)">del</button> -->
       </div>
     </div>
   </div>
