--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-profile></app-profile> -->
 <!-- <app-friends></app-friends> -->
-<!-- <app-all-projects></app-all-projects> -->
-<app-project-details></app-project-details>
+<app-all-projects></app-all-projects>
 <!-- <app-project-view></app-project-view> -->
 <!-- <app-developer-content></app-developer-content> -->
+<app-project-details></app-project-details>
