--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-project-details></app-project-details> -->
-<!-- <app-stranger-profile></app-stranger-profile> -->
-<!-- <app-project-details></app-project-details> -->
-<app-developer-content></app-developer-content>
+<router-outlet></router-outlet>
