--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -1,8 +1,8 @@
 <Section class="friends py-3">
   <div class="container">
   <div *ngIf="friends">
-    <div class="friends__content" *ngFor="let friend of friends">
-      <div class="friends__content-info">
+    <div class="friends__content" *ngFor="let friend of friends" >
+      <div class="friends__content-info" (click)="strangProfile($event, friend)" [routerLink]="['/account',currentUser.id,'user',friend.name]" >
         <div class="friends__content-info-img">
           <img class="img-fluid"  *ngIf="friend.image" [src]='friend.image' alt="" />
           <img class="img-fluid" *ngIf="!friend.image" src='../../assets/imgs/friends/friend.png'>
