--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -30,7 +30,7 @@
       flex-direction: row;
       align-items: center;
       flex:0 1 20%;
-
+      cursor: pointer;
       &-img {
         width: 50px;
         height: 50px;
