--- a/src/app/account-navbar/account-navbar.component.html
+++ b/src/app/account-navbar/account-navbar.component.html
@@ -14,7 +14,7 @@
                     <div class="dropdown">
                         <button id="my-dropdown" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
                         <figure class="navbar-container__content-list--item-img"><img class="img-full" src="https://i.imgur.com/zOXKdmt.png"></figure>
-                        Ali Emam
+                        {{currentUser.name}}
                         </button>
                         <div class="dropdown-menu" aria-labelledby="my-dropdown">
                             <a class="dropdown-item active" href="#">Yoo</a>
