--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -23,7 +23,7 @@
                   </div>
                 </div>
               </div>
-              <div class="developer-content__status-footer text-center">
+              <div class="developer-content__status-footer text-center" (click)="openDialog()">
                 <div class="developer-content__status-footer-add">
                   <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
                 </div>
