--- a/src/app/login-navbar/login-navbar.component.scss
+++ b/src/app/login-navbar/login-navbar.component.scss
@@ -3,6 +3,7 @@
     position: relative;
     padding-top: 2rem;
     overflow: hidden;
+    background-color:#ffffff;
     &-container{
         &__brand{
             color: $lightBlue;
