--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -112,7 +112,7 @@ app-reg-animation {
 }
 
 
-//************  responsive  **************//
+//****  responsive  ******//
 
 
 @media only screen and (max-width: 770px) {
