--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-
-
-<app-account-navbar></app-account-navbar>
-<app-navbar></app-navbar> 
 <router-outlet></router-outlet>
-<app-profile></app-profile>
-<app-all-projects></app-all-projects>
-<app-all-friends></app-all-friends>
-
-
+<!-- <app-project-details></app-project-details> -->
