--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -27,6 +27,8 @@
                 box-shadow: $boxShadow;
                 margin-top: 25px;
                 border:none;
+                border: 1px solid $lightBlue;
+
                 &:hover{
                     color: $lightBlue;
                     background-color: $white;
@@ -118,3 +120,20 @@
         }
     }
 } 
+.wrongData{
+    position: absolute;
+    right: 40px;
+    top: 0;
+    color: red;
+    font-size: 10px;
+}
+.wrongPassword{
+    position: absolute;
+    right: 20px;
+    top: 0;
+    color: red;
+    font-size: 10px;
+}
+.button-hide{
+    cursor: pointer;
+}
