--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,15 +1,92 @@
 <section class="profile">
-  <div class="container-fluid pl-0">
+  <div class="container">
+
     <div class="row">
-      <div class="col-2">
-        <app-sidebar></app-sidebar>
-      </div>
-      <div class="col-10">
-        <div class="container">
-          <div class="profile-info py-3">
+      <section class="profile__info col-12 col-md-12 col-lg-6 ">
+        <div class="row">
+          <div class="col-3 profile__info-img">
+            <figure class="rounded-circle">
+              <img id="imagePreview" [src]="fileSrc" style="width: 100%; height: 100%;" />
+              <form [formGroup]='userProfile' class=" profile__info-img__form">
+                <label class="attach-file">
+                  <input class=" profile__info-img__form-input" type="file" id="imageUpload" formControlName='image' (change)="readURL($event)" />
+                  <mat-icon>camera_alt</mat-icon><span>Upload Img</span>
+                </label>
+              </form>
+            </figure>
+          </div>
+          <div class="col-9 profile__info-details">
+            <div class="profile__info-details__personal">
+              <h3>{{currentUser.name}}</h3>
+              <p>{{currentUser.title}}</p>
+              <div class="row">
+                <a class ="col-6" href="mailto:mail1@example.com" target="_top">{{currentUser.email}}</a>
+                <div class="profile-info__details-rating col-6">
+                  <ng-container *ngFor="let star of stars">
+                    <app-star-rating [starId]="star" [rating]="avgStars">
+                    </app-star-rating>
+                  </ng-container>
+                </div>
+              </div>
+
+            </div>
+            <div class="profile__info-details__Bio">
+              <h2>Bio : </h2>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos libero iusto illum fugit ab cum
+                perspiciatis, ipsa corporis aut rerum maxime porro officia ut? Corporis aliquam error porro omnis quas.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="profile__chart col-12 col-md-12 col-lg-5  ml-auto">
+        <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+        [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
+      </canvas>
+        </section>
     </div>
+    <section class="row comments-parent">
+      <div class="profile__comments col-12 " #created>
+        <div class="profile__comments-comment  col-12 pb-5 pt-5">
+          <div class="row contentBox" *ngFor='let user of usersComments'>
+            <div class="profile__comments-comment__user-img col-1">
+              <figure>
+                <img [src]="usersComments[0].img" alt="">
+              </figure>
+            </div>
+            <div class="profile__comments-comment__text col-9">
+              <h4>{{user.name}}</h4>
+              <p>{{user.title}}</p>
+              <p>{{user.comment}}</p>
+            </div>
+            <div class="profile__comments-comment__text col-2">
+              <div class="hovering-data">rating : {{rating}}</div>
+              <ng-container *ngFor="let star of stars">
+                <app-star-rating [starId]="star" [rating]="user.rate">
+                </app-star-rating>
+              </ng-container>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-12 comments-parent__formContainer">
+        <form class="comments-parent__formContainer-form" [formGroup]='userComment' (ngSubmit)='onSubmit(userComment)'>
+          <textarea formControlName="comment" valid placeholder="Type Your Comment Here ... "></textarea>
+          <section class="rate-and-sumbit">
+            <div class="hovering-data" #dataHovering>rating : {{rating}}</div>
+            <ng-container *ngFor="let star of stars">
+              <app-star-rating (starEnter)='onStarEnter($event)' (starLeave)='onStarLeave()'
+                (starClicked)='onStarClicked($event,dataHovering)' [starId]="star" [rating]="hoverState || rating">
+              </app-star-rating>
+            </ng-container>
+            <button [disabled]="userComment.invalid" type="submit" class="btn-send" name="submit">send</button>
+
+          </section>
+        </form>
+      </div>
+
+    </section>
+
   </div>
 </section>
