all routing finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<!-- <router-outlet></router-outlet> -->
-<app-project-details></app-project-details>
+<router-outlet></router-outlet>
+
+<!-- <app-project-details></app-project-details> -->
+<!-- <app-project-view></app-project-view> -->
+<!-- <app-developer-content></app-developer-content> -->
