--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -72,7 +72,7 @@
 
         </div>
       </div>
-      <div class="col-12 comments-parent__formContainer">
+      <!-- <div class="col-12 comments-parent__formContainer">
         <form class="comments-parent__formContainer-form" [formGroup]='userComment' (ngSubmit)='onSubmit(userComment)'>
           <textarea formControlName="comment" valid placeholder="Type Your Comment Here ... "></textarea>
           <section class="rate-and-sumbit">
@@ -86,7 +86,7 @@
 
           </section>
         </form>
-      </div>
+      </div> -->
 
     </section>
 
