--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -36,7 +36,7 @@
           </div>
       </div>
       <div class="col-lg-3 col-md-6" *ngFor="let project of userProject ; let i = index">
-        <a href="#" (click)="selectProject($event ,project)">
+        <a (click)="selectProject($event ,project)" [routerLink]="[project.name,'Details']">
           <div class="all-projects__card">
             <h2 class="all-projects__card-head pt-5 ml-4">{{project.name}}</h2>
             <p class="all-projects__card-date ml-4 pt-4"><i class="mr-2" >Start Date:</i>
