--- a/src/app/project-view/project-view.component.html
+++ b/src/app/project-view/project-view.component.html
@@ -1,8 +1,12 @@
 <section class="container">
     <section class="projects-nav row d-flex justify-content-between">
         <div class="btn-group  p-0" role="group" aria-label="Basic example">
-          <button type="button" routerLinkActive="project-active" class="btn project-details-btn project-active" routerLink="/projectDetails">Project Details</button>
-          <button type="button" routerLinkActive="project-active" class="btn project-flow-btn" routerLink="/projectFlow">Project Flow</button>
+          <button type="button" routerLinkActive="project-active" class="btn project-details-btn"
+          [routerLink]="['/account',currentUser.id,'projects',currentproject.name,'Details']" 
+          >Project Details</button>
+          <button type="button" routerLinkActive="project-active" class="btn project-flow-btn"
+          [routerLink]="['/account',currentUser.id,'projects',currentproject.name,'Flow']" 
+          >Project Flow</button>
         </div>
       </section>
       <section class="container">
