--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-profile></app-profile> -->
-<app-admin-panel></app-admin-panel>
+<!-- <app-admin-panel></app-admin-panel> -->
+<app-developer-content></app-developer-content>
