assign to works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 <!-- <app-friends></app-friends> -->
 <app-all-projects></app-all-projects>
 <!-- <app-project-view></app-project-view> -->
-<!-- <app-developer-content></app-developer-content> -->
-<app-project-details></app-project-details>
+<app-developer-content></app-developer-content>
+<!-- <app-project-details></app-project-details> -->
