--- a/src/app/create-new-project/create-new-project.component.html
+++ b/src/app/create-new-project/create-new-project.component.html
@@ -1,4 +1,4 @@
-<a href="" [matDialogClose] class="close_modal"><mat-icon>clear</mat-icon></a>
+<button [matDialogClose] class="close_modal btn"><mat-icon>clear</mat-icon></button>
 <h3 class="text-center h2">Create Project</h3>
 
 <form
