--- a/src/app/create-task/create-task.component.html
+++ b/src/app/create-task/create-task.component.html
@@ -40,23 +40,17 @@
     <textarea matInput placeholder="" formControlName="description" [(ngModel)]="item.description"></textarea>
   </mat-form-field>
 <!------------------------ Assign  ------------------------>
-  <mat-form-field class="example-full-width">
-    <mat-label>Assignee</mat-label>
-    <input
-      type="text"
-      matInput
-      [formControl]="myControl" formControlName="assignTo"
-      [matAutocomplete]="auto"
-    />
-    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-      <mat-option
-        *ngFor="let option of filteredOptions | async"
-        [value]="option" (click)="selectUser($event,option)"
-      >
-        {{ option.name }}
+<mat-form-field class="example-full-width" *ngIf="assign?.length > 0">
+  <mat-label>Assignee</mat-label>
+  <!-- <div > -->
+    <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+    <mat-autocomplete  #auto="matAutocomplete" [displayWith]="displayFn">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option" (click)='selectUser($event,option)'>
+        {{option.email}}
       </mat-option>
     </mat-autocomplete>
-  </mat-form-field>
+  <!-- </div> -->
+</mat-form-field>
   <!-- ----------------------------- Invite to -------------------------------->
   <!-- <mat-form-field class="example-full-width">
     <mat-label>Invite by Email</mat-label>
