--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -50,7 +50,8 @@
         <!-- ------------------------------- Sumbit -------------------------------- -->
                 <div class="form-container__btns">
                     <button class="btn btn-primary form-container__btns-btn" type="submit"
-                        [disabled]="nameIsExist || phoneIsExist || register.invalid">Register</button>
+                        [disabled]="nameIsExist || phoneIsExist || register.invalid"
+                        >Register</button>
                 </div>
             </form>
         </div>
