friends is finished

--- a/src/app/find-friend/find-friend.component.html
+++ b/src/app/find-friend/find-friend.component.html
@@ -13,7 +13,7 @@
        <p>{{user.title}}</p>
      </div>
      <div class="request__content-state">
-       <button class="btn btn-info mx-2" (click)="addFriend($event,friend)">Add Friend</button>
+       <button class="btn btn-info mx-2" (click)="addFriend($event,user)">Add Friend</button>
      </div>
    </div>
  </div>
