--- a/src/app/friend-request/friend-request.component.html
+++ b/src/app/friend-request/friend-request.component.html
@@ -1,9 +1,10 @@
 <section class="request py-3">
   <div class="container">
-    <div class="request__content" *ngFor="let friend of friends">
+    <div class="request__content" *ngFor="let friend of friendrequests">
       <div class="request__content-info">
         <div class="request__content-info-img">
-          <img class="img-fluid" src="../../assets/imgs/friends/friend.png" alt="" />
+          <img class="img-fluid"  *ngIf="friend.image" [src]='friend.image' alt="" />
+          <img class="img-fluid" *ngIf="!friend.image" src='../../assets/imgs/friends/friend.png'>
         </div>
         <div class="request__content-info-name">
           <p>{{friend.name}}</p>
