--- a/src/app/all-friends/all-friends.component.html
+++ b/src/app/all-friends/all-friends.component.html
@@ -1,6 +1,6 @@
 <section class="all-friends py-3">
   <div class="container">
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <ul class="nav nav-tabs" id="myTab" role="tablist" data-step="9" data-intro="Friends tabs" data-position='right'>
       <li class="nav-item">
         <a class="nav-link active" id="friends-tab" data-toggle="tab" href="#friends" role="tab" aria-controls="friends"
           aria-selected="true">Friends</a>
