--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -27,14 +27,9 @@
 <section class="all-projects mb-5">
   <div class="all-projects__wrapper container p-5 ">
     <div class="row">
-      <div class="col-lg-3 col-md-6" (click)="openDialog()">
-<<<<<<< HEAD
-          <div class="all-projects__card">
-           <div class="all-projects__card-add">
-=======
+      <div class="col-lg-3 col-md-6" (click)="openDialog()" data-step="3" data-intro="Create project" data-position='right'>
           <div class="all-projects__card createNow">
            <div class="all-projects__card-add ">
->>>>>>> blue
             <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
             <p>Create Project</p>
            </div>
@@ -52,11 +47,7 @@
             </p>
           </div>
         </a>
-<<<<<<< HEAD
-        <button (click)="delete($event,project)">del</button>
-=======
         <!-- <button (click)="delete($event,project)">del</button> -->
->>>>>>> blue
       </div>
     </div>
   </div>
