--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-<router-outlet></router-outlet>
-<!-- <app-project-details></app-project-details> -->
-=======
 <!-- <router-outlet></router-outlet> -->
-<app-project-details></app-project-details>
->>>>>>> blue
+
+<app-tour-guide></app-tour-guide>
