--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -1,4 +1,4 @@
-<Section class="friends py-3">
+<Section class="friends py-3" data-step="10" data-intro="working on tasks" data-position='right'>
   <div class="container">
   <div *ngIf="friends">
     <div class="friends__content" *ngFor="let friend of friends" >
