--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -51,7 +51,7 @@
                                 dolore odio enim perspiciatis
                                 veniam impedit omnis itaque nam tempora deserunt eligendi voluptatum, placeat laborum ex
                                 pariatur.</p>
-                            <a class="started rounded-pill " href="#">Get Started</a>
+                            <a class="started rounded-pill " href="">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -104,11 +104,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="home-about-container-row-img">
-<<<<<<< HEAD
-                            <img class="img-fluid" src="../../assets/img/about.png" alt="">
-=======
                             <img class="img-fluid" src="../../assets/imgs/home/about.png" alt="">
->>>>>>> blue
                         </div>
                     </div>
                 </div>
@@ -127,25 +123,25 @@
                 <div class="home-features__container-row row">
                     <div class="col-md-9 container">
                         <div class="row">
-                            <div class="home-features__container-row__item  col-md-3">
+                            <div class="home-features_container-row__item  col-md-3">
                                 <span>
                                     <mat-icon aria-hidden="false" aria-label="Example list icon">list</mat-icon>
+                                    <h4>Task Managment</h4>
                                 </span>
-                                <h4>Task Managment</h4>
                             </div>
-                            <div class="home-features__container-row__item col-md-3">
+                            <div class="home-features_container-row__item col-md-3">
                                 <span> 
                                         <mat-icon aria-hidden="false" aria-label="Example schedule icon">schedule
                                         </mat-icon>
+                                        <h4>Time Managment</h4>
                                     </span>
-                                <h4>Time Managment</h4>
                             </div>
-                            <div class="home-features__container-row__item col-md-3">
+                            <div class="home-features_container-row__item col-md-3">
                                 <span>
                                     <mat-icon aria-hidden="false" aria-label="Example event_note icon">event_note
                                     </mat-icon>
+                                    <h4>Planning</h4>
                                 </span>
-                                <h4>Planning</h4>
                             </div>
                         </div>
                     </div>
@@ -159,11 +155,7 @@
 
     <section class="home-team  container-fluid" >
         <div class="home-team_img">
-<<<<<<< HEAD
-            <img src="../../assets/img/team1.png" alt="" class="img-fluid">
-=======
             <img src="../../assets/imgs/home/team1.png" alt="" class="img-fluid">
->>>>>>> blue
         </div>
         <div class="container">
             <div class="home-team__header">
@@ -173,25 +165,6 @@
             <div class="home-team__gallery row">
                 <div class="home-team__gallery-item col-md-2" id="team">
                     <h3>Ali</h3>
-<<<<<<< HEAD
-                    <img src="../../assets/img/ali.jpg" alt="" class="rounded-circle img-fluid">
-                </div>
-                <div class="home-team__gallery-item col-md-2">
-                    <h3>Mai</h3>
-                    <img src="../../assets/img/mai.jpg" alt="" class="rounded-circle img-fluid">
-                </div>
-                <div class="home-team__gallery-item col-md-2">
-                    <h3>Mohamed</h3>
-                    <img src="../../assets/img/moahmed.jpg" alt="" class="rounded-circle img-fluid">
-                </div>
-                <div class="home-team__gallery-item col-md-2">
-                    <h3>Nada</h3>
-                    <img src="../../assets/img/nada.jpeg" alt="" class="rounded-circle img-fluid">
-                </div>
-                <div class="home-team__gallery-item col-md-2">
-                    <h3>Omnia</h3>
-                    <img src="../../assets/img/omnia.jpg" alt="" class="rounded-circle img-fluid">
-=======
                     <img src="../../assets/imgs/home/ali.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
@@ -209,7 +182,6 @@
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Omnia</h3>
                     <img src="../../assets/imgs/home/omnia.jpg" alt="" class="rounded-circle img-fluid">
->>>>>>> blue
                 </div>
             </div>
         </div>
@@ -225,8 +197,8 @@
                 <div class="col-md-6">
                     <div class="home-footer__container-header row">
                         <form class="form-inline">
-                            <div class="form-group mx-sm-3 mb-2">
-                                <h3 class="mr-3">Get Started Now</h3>
+                            <h3>Get Started Now</h3>
+                            <div class="form-group  mb-2">
                                 <input type="email" class="form-control" placeholder="Email Address">
                                 <button type="submit" class="btn btn-primary">Subscribe</button>
                             </div>
@@ -251,7 +223,7 @@
                     <a class="nav-link" href="#team">OUR TEAM</a>
                 </li>
             </ul>
-            <p> 2020 All Right Reserved By TODOLESS </p>
+            <p> 2020 All Right Reserved By <a href="#">TODOLESS</a></p>
         </div>
     </footer>
 </main>
