--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,9 +17,9 @@
         <mat-icon class="aside-container__btn-icon">supervisor_account</mat-icon>
         <a class="aside-container__btn-link" >Friends</a>
       </div>
-      <div class="aside-container__btn">
+      <div [routerLink]="['/account',id,'support']" routerLinkActive="active" class="aside-container__btn">
         <mat-icon class="aside-container__btn-icon">headset_mic</mat-icon>
-        <a class="aside-container__btn-link" routerLinkActive="active">Support</a>
+        <a class="aside-container__btn-link" >Support</a>
       </div>
     </aside>
   </section>
