--- a/src/app/stranger-profile/stranger-profile.component.html
+++ b/src/app/stranger-profile/stranger-profile.component.html
@@ -5,18 +5,19 @@
           <div class="row">
             <div class="col-3 profile__info-img">
               <figure class="rounded-circle">
-                <img id="imagePreview" [src]="currentUser.image" style="width: 100%; height: 100%;" />
+                <img id="imagePreview" [src]="strangeProfile.image" style="width: 100%; height: 100%;" />
               </figure>
             </div>
             <div class="col-9 profile__info-details">
               <div class="profile_info-details_personal">
-                <h3>{{currentUser.name}}</h3>
-                <p #titleEdit>{{currentUser.title}}</p>
+                <h3>{{strangeProfile.name}}</h3>
+                <p #titleEdit>{{strangeProfile.title}}</p>
                 <div class="row">
-                  <a class ="col-6" href="mailto:mail1@example.com" target="_top">{{currentUser.email}}</a>
+                  <a class ="col-6" href="mailto:mail1@example.com" target="_top">{{strangeProfile.email}}</a>
                   <div class="profile-info__details-rating col-6">
                     <ng-container *ngFor="let star of stars">
-                      <app-star-rating [starId]="star" [rating]="avgStars">
+                        <app-star-rating *ngIf="strangeProfile.starts" [starId]="star" [rating]="strangeProfile.starts"></app-star-rating>
+                        <app-star-rating *ngIf="!strangeProfile.starts" [starId]="star" [rating]="rating">
                       </app-star-rating>
                     </ng-container>
                   </div>
@@ -25,7 +26,7 @@
               </div>
               <div class="profile_info-details_Bio">
                 <h2>Bio : </h2>
-                <p #bioParagraph>{{currentUser.bio}}</p>
+                <p #bioParagraph>{{strangeProfile.bio}}</p>
               </div>
             </div>
           </div>
@@ -42,16 +43,17 @@
             <div class="row contentBox" *ngFor='let user of usersComments'>
               <div class="profile__comments-comment__user-img col-1">
                 <figure>
-                  <img [src]="currentUser.img" alt="">
+                  <img class="img-fluid"  *ngIf="user.img" [src]="user.img" alt="" />
+                  <img class="img-fluid" *ngIf="!user.img" src='../../assets/imgs/friends/friend.png'>
                 </figure>
               </div>
               <div class="profile__comments-comment__text col-9">
-                <h4>{{currentUser.name}}</h4>
-                <p>{{currentUser.title}}</p>
-                <p>{{currentUser.comment}}</p>
+                <h4>{{user.name}}</h4>
+                <p>{{user.title}}</p>
+                <p>{{user.comment}}</p>
               </div>
               <div class="profile__comments-comment__text col-2">
-                <div class="hovering-data">rating : {{rating}}</div>
+                <div class="hovering-data">rating : {{user.rate}}</div>
                 <ng-container *ngFor="let star of stars">
                   <app-star-rating [starId]="star" [rating]="user.rate">
                   </app-star-rating>
